--- a/ressource.qrc
+++ b/ressource.qrc
@@ -6,4 +6,10 @@
     <qresource prefix="/css">
         <file>Multifacile.css</file>
     </qresource>
+    <qresource prefix="/translation">
+        <file>qt_fr.qm</file>
+    </qresource>
+    <qresource prefix="/application">
+        <file>Add.exe</file>
+    </qresource>
 </RCC>
