major update of Multifacile : 3.0

--- a/Multifacile.css
+++ b/Multifacile.css
@@ -1,55 +1,33 @@
-* 
+QMainWindow
 {
-	font-family: "Comic Sans MS"; 
-	/*color: rgb(255,169,50);*/
-	color: rgb(255, 0, 0);
-	font-size: 16px; 
-} 
-QPushButton:hover 
-{ 
-	color: rgb(255, 0, 0); 
-} 
-QMainWindow 
-{
-	/*background-color: rgb(75, 75, 75);*/
-	background-color: rgb(34, 75, 217);
+	background-image: url(":/image/Fond.png");
+	background-repeat: no-repeat;
+	
 }
-hr 
+ QMenuBar::item, QMenuBar, QMenu 
 { 
-	border-color: red; 
-} 
-QMenuBar::item, QMenuBar, QMenu 
-{ 
-	background-color: rgb(34, 75, 217);
+	background-color: rgba(255, 255, 255, 0);
 	color: white;
-} 
+}
+
 QMenuBar::item 
 { 
-	/*background-color: red;*/
-	/*background-color: rgb(75, 75, 75);*/
-	background-color: rgb(34, 75, 217);
-	border: 2px solid rgb(255, 169, 50);
-	border-radius: 4px;
-	margin: 2px; 
-	padding: 1.5px; 
+	margin: 0px;
+	margin-top: 40px;
+	padding: 1.5px;
+	width: 350px;
 }
 QMenuBar
 {
-	/*border-bottom: 1px solid rgb(255, 169, 50);*/
-	/*background-color: rgb(75, 75, 75);*/
-	background-color: rgb(34, 75, 217);
+	background-color: rgb(54, 103, 59);
 }
 QMenu 
 { 
 	border: 1.5px solid rgb(255, 169, 50);
 	border-radius: 4px;
-	background-color: rgb(34, 75, 217);
+	background-color: rgb(54, 103, 59);
 }
-QMenu::item:selected:enabled, QMenuBar::item:selected
-{ 
-	background-color: rgb(44, 115, 255); 
-}
-QPushButton:disabled , QMenu::item:disabled
+QMenu::item:disabled
 { 
 	color: grey; 
 }
@@ -57,27 +35,44 @@ QPushButton:pressed
 { 
 	color: rgb(255,169,50); 
 }
-QWidget
+QPushButton#QuitButton
 {
-	background-color: rgb(34, 75, 217);
+	background-image: url(":/image/Underline.png");
+	background-repeat: no-repeat;
+	background-position: bottom;
+	margin: 0px;
+}
+QPushButton#Cross
+{
+	background-image: url(none);
+	margin-top: 30px;
+	margin-right: 50px;
+}
+QPushButton#mini
+{
+	background-image: url(none);
+	margin-top: 25px;
+	margin-right: 5px;
 }
 QPushButton
 {
-	background-color: yellow;
-	border: 2px solid red;
-	border-radius: 4px;
-	padding: 1.5px;
-}
-QLabel#correction
-{
-	color: black;
-}
-QLabel
-{
-	color: white;
-	background-color: rgb(34, 75, 217);
+	background-color: rgba(255, 255, 255, 0);
+	background-image: url(":/image/Bouton.png");
+	background-repeat: no-repeat;
+	margin: 0px;
+	padding: 0px;
 }
 QSpinBox
 {
 	color: white;
+}
+QMessageBox
+{
+	background-color: #427d4a;
+}
+QMessageBox QPushButton
+{
+	background-image: url(none);
+	border: 2px solid rgb(255,169,50);
+	padding: 3px;
 }
