--- a/ressource.qrc
+++ b/ressource.qrc
@@ -5,11 +5,30 @@
     </qresource>
     <qresource prefix="/css">
         <file>Multifacile.css</file>
+        <file>Application.css</file>
+        <file>Fen2.css</file>
     </qresource>
     <qresource prefix="/translation">
         <file>qt_fr.qm</file>
     </qresource>
     <qresource prefix="/application">
         <file>Add.exe</file>
+    </qresource>
+    <qresource prefix="/image">
+        <file>Background_Astuce.png</file>
+        <file>Bouton.png</file>
+        <file>Fond.png</file>
+        <file>Next.png</file>
+        <file>OpacRight.png</file>
+        <file>OpacWrong.png</file>
+        <file>Point.png</file>
+        <file>Previous.png</file>
+        <file>Right.png</file>
+        <file>TextBox.png</file>
+        <file>Underline.png</file>
+        <file>Wrong.png</file>
+    </qresource>
+    <qresource prefix="/police">
+        <file>DK Crayon Crumble.ttf</file>
     </qresource>
 </RCC>
