--- a/Multifacile.css
+++ b/Multifacile.css
@@ -70,9 +70,9 @@ QMessageBox
 {
 	background-color: #427d4a;
 }
-QMessageBox QPushButton
+QPushButton#OkBouton
 {
+	background-color: rgba(255, 255, 255, 0);
 	background-image: url(none);
-	border: 2px solid rgb(255,169,50);
 	padding: 3px;
 }
