--- a/Multifacile/css/Multifacile.css
+++ b/Multifacile/css/Multifacile.css
@@ -52,7 +52,7 @@ QPushButton#mini
 QPushButton
 {
 	background-color: rgba(255, 255, 255, 0);
-	background-image: url(":/image/Bouton.png");
+        background-image: url(":/image/TextBox.png");
 	background-repeat: no-repeat;
 	margin: 0px;
 	padding: 0px;
